# fastapi_basic

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 217f64cf64bc_create_sys_user_table.py  645b992c7c08_create_admins_table.py  7c07b7aedb5f_initial_migration.py  8025234ea328_initial_migration.py
src/app/: main.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py  auth.py  common.py  demo.py
src/app/core/: config.py  dependencies.py  exceptions.py  middleware.py  security.py
src/app/curd/: admin.py  query.py  user.py
src/app/db/: base.py  session.py
src/app/enum/: __init__.py  view_status.py
src/app/models/: __init__.py  admin.py  sql_template.py  user.py  view_config.py
src/app/schemas/: auth.py  common.py
src/app/service/: admin_service.py  query_service.py
src/app/utils/: logger.py  reponse.py
